5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1692_1101.log
== TEST (2019-04-23 21:41:44) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ")upper.()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	
	
-- ERROR:
File "XXXX", line 2
    y=input()upper.()
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:42:13) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input(("Digite R para residencias, I para industria e C para comercio: ")upper.())
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	
	
-- ERROR:
File "XXXX", line 2
    y=input(("Digite R para residencias, I para industria e C para comercio: ")upper.())
                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:42:22) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input(("Digite R para residencias, I para industria e C para comercio: ")upper.())
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	
	
-- ERROR:
File "XXXX", line 2
    y=input(("Digite R para residencias, I para industria e C para comercio: ")upper.())
                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:49:25) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ")upper.()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	
	
-- ERROR:
File "XXXX", line 2
    y=input()upper.()
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:49:47) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").pper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:49:57) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:50:24) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:07:42) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x=>500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x=>1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x>=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- ERROR:
File "XXXX", line 7
    if(x=>500):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:11:21) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x>=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x=>1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x>=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- ERROR:
File "XXXX", line 14
    if(x=>1000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:12:04) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x>=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x=>1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x>=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- ERROR:
File "XXXX", line 14
    if(x=>1000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:16:28) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x>=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x=%3
-- ERROR:
File "XXXX", line 14
    if(x=%3
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:16:41) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x>=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x=>1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x>=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- ERROR:
File "XXXX", line 14
    if(x=>1000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:16:47) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x>=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x=>1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x>=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- ERROR:
File "XXXX", line 14
    if(x=>1000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:26:44) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x>=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x=>1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x>=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- ERROR:
File "XXXX", line 14
    if(x=>1000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:27:02) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x>=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x>=1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x>=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:28:16) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x<=1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:28:50) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x<=1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:29:08) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x<=1000):
		x=x*0,55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:29:54) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0,44
		print("Valor total:",x)
	else:
		x=x*0,65
		print("Valor total:",x)
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0,60
		print("Valor total:",x)
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:32:07) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
		print("Valor total:",x)
	else:
		x=x*0.65
		print("Valor total:",x)
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total:",(round(x,2)
	else:
		x=x*0.60
		print("Valor total:",(round(x,2)
	
	
  
	
	
-- ERROR:
File "XXXX", line 24
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:32:29) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
		print("Valor total:",x)
	else:
		x=x*0.65
		print("Valor total:",x)
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total:",(round(x,2))
	else:
		x=x*0.60
		print("Valor total:",(round(x,2))
	
	
  
	
	
-- ERROR:
File "XXXX", line 24
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:32:37) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
		print("Valor total:",x)
	else:
		x=x*0.65
		print("Valor total:",x)
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total:",(round(x,2)))
	else:
		x=x*0.60
		print("Valor total:",(round(x,2))
	
	
  
	
	
-- ERROR:
File "XXXX", line 32
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:32:55) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
		print("Valor total:",x)
	else:
		x=x*0.65
		print("Valor total:",x)
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
		print("Valor total:",x)
	else:
		x=x*0.60
		print("Valor total:",x)
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
	else:
		x=x*0.60
		
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:33:54) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
	else:
		x=x*0.65
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
	else:
		x=x*0.60
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
	else:
		x=x*0.60

print("Valor total: R$",(round(x,2)))		
		
		
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$ -56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:34:10) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
	else:
		x=x*0.65
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
	else:
		x=x*0.60
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
	else:
		x=x*0.60

print("Valor total: R$",(round(x,2)))		
		
		
	
	
  
	
	
-- EXECUTION TIME:
0.209876
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$ -56.0
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:34:12) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
	else:
		x=x*0.65
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
	else:
		x=x*0.60
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
	else:
		x=x*0.60

print("Valor total: R$",(round(x,2)))		
		
		
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$ -56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:36:09) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
	else:
		x=x*0.65
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
	else:
		x=x*0.60
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
	else:
		x=x*0.60

print("Valor total: R$",(round(x,2)))		
		
		
	
	
  
	
	
-- EXECUTION TIME:
0.18712
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$ -56.0
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:36:15) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
	else:
		x=x*0.65
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
	else:
		x=x*0.60
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
	else:
		x=x*0.60

print("Valor total: R$",(round(x,2)))		
		
		
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$ -56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:36:54) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
	else:
		x=x*0.65
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
	else:
		x=x*0.60
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
	else:
		x=x*0.60

print("Valor total: R$",(round(x,2)))		
		
		
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$ -56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:37:43) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.65
		print("Valor total: R$",(round(x,2)))	
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.60
		print("Valor total: R$",(round(x,2)))	
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.60
		print("Valor total: R$",(round(x,2)))	
		

	
		
		
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:37:52) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.65
		print("Valor total: R$",(round(x,2)))	
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.60
		print("Valor total: R$",(round(x,2)))	
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.60
		print("Valor total: R$",(round(x,2)))	
		

	
		
		
	
	
  
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:37:56) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.65
		print("Valor total: R$",(round(x,2)))	
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.60
		print("Valor total: R$",(round(x,2)))	
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.60
		print("Valor total: R$",(round(x,2)))	
		

	
		
		
	
	
  
	
	
-- EXECUTION TIME:
0.165736
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:25:24) 
-- CODE:
x=float(input("Digite o consumo de energia em kwh:"))
y=input("Digite R para residencias, I para industria e C para comercio: ").upper()
print("Entradas:",x,"kWh e tipo",y)
if((x<0)or((y!="R")and(y!="I")and(y!="C"))):
	print("Dados invalidos")
elif(y=="R"):
	if(x<=500):
		x=x*0.44
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.65
		print("Valor total: R$",(round(x,2)))	
elif(y=="C"):
	if(x<=1000):
		x=x*0.55
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.60
		print("Valor total: R$",(round(x,2)))	
elif(y=="I"):
	if(x<=5000):
		x=x*0.55
		print("Valor total: R$",(round(x,2)))	
	else:
		x=x*0.60
		print("Valor total: R$",(round(x,2)))	
		

	
		
		
	
	
  
	
	
-- EXECUTION TIME:
0.173219
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
